Add evaluation notebooks

--- a/svd_training/SVD_training.ipynb
+++ b/svd_training/SVD_training.ipynb
@@ -35,6 +35,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "id": "ee010e4f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ALFRMOGTO1K4M     656\n",
+       "A2OWR2PL3DLWS4    496\n",
+       "A2OS7CFQI4DWPT    490\n",
+       "AVU1ILDDYW301     469\n",
+       "A2RYWPOL4NN2KG    434\n",
+       "                 ... \n",
+       "A1H274O3M6WZTV     21\n",
+       "A1JA669AXG6PZ4     21\n",
+       "AEDEJRT23E7UJ      21\n",
+       "A12PVHUR1BWL75     21\n",
+       "A7YLUP4DQX8SV      21\n",
+       "Name: u_id, Length: 101084, dtype: int64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"u_id\"].value_counts().loc[lambda x: x > 20].index"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "id": "2629805f",
    "metadata": {},
