--- a/lightfm_evaluation/LightFM_evaluation_100.ipynb
+++ b/lightfm_evaluation/LightFM_evaluation_100.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "9de13e68",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-lcwvj1j5 because the default path (/home/i313924/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n",
+      "Matplotlib is building the font cache; this may take a moment.\n"
+     ]
+    }
+   ],
    "source": [
     "import gzip\n",
     "import json\n",
@@ -26,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "0e39b2eb",
    "metadata": {},
    "outputs": [],
@@ -36,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "27182c8a",
    "metadata": {},
    "outputs": [],
@@ -69,6 +78,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# wziac popularnych uzytkownikow i produkty\n",
     "interactions_sample = scipy.sparse.load_npz('/pio/scratch/1/i313924/lightfm_data/interactions_sample.npz')"
    ]
   },
@@ -93,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "bac13c0d",
    "metadata": {},
    "outputs": [],
@@ -104,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "025c1cdb",
    "metadata": {},
    "outputs": [
@@ -260,7 +270,7 @@
        "[10000 rows x 5 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "6a127cc0",
    "metadata": {},
    "outputs": [],
@@ -283,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "5c16b88a",
    "metadata": {},
    "outputs": [],
@@ -295,14 +305,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "d1fdb2a6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d59d9f42f6e94506ad2aa164045e2349",
+       "model_id": "7f37afa49a4e4c6eacc5f284e0188f0f",
        "version_major": 2,
        "version_minor": 0
       },
