--- a/lightfm_evaluation/LightFM_evaluation_300.ipynb
+++ b/lightfm_evaluation/LightFM_evaluation_300.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "9de13e68",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-1c98kjso because the default path (/home/i313924/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
+      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-jly43z1i because the default path (/home/i313924/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
      ]
     }
    ],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "0e39b2eb",
    "metadata": {},
    "outputs": [],
@@ -44,12 +44,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "27182c8a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = pd.read_pickle('/pio/scratch/1/i313924/lightfm_data/warp_model_300_epochs.pkl')"
+    "model = pd.read_pickle('/pio/scratch/1/i313924/data/lightfm_data/warp_model_300_epochs.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "103d9abd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = pd.read_pickle('/pio/scratch/1/i313924/data/lightfm_data/dataset.pkl')"
    ]
   },
   {
@@ -279,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "6a127cc0",
    "metadata": {},
    "outputs": [],
@@ -403,6 +413,286 @@
       ]
      },
      "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(cos_dist_A < cos_dist_B).mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "447b6fc7",
+   "metadata": {},
+   "source": [
+    "## ABX (only popular)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "dd02937c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "abx_tests = pd.read_json('/pio/scratch/1/i313924/data/test_data/test_ABX_weighted_slim.json', lines=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "01c4f1cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A = np.zeros((10000, 100))\n",
+    "B = np.zeros((10000, 100))\n",
+    "X = np.zeros((10000, 100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "55203534",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f75add3b9d71449aa021833a12f0e40c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "for i, test in tqdm(abx_tests.iterrows()):\n",
+    "    A[i, :] = get_item_embedding(model, dataset, test[\"A\"])\n",
+    "    B[i, :] = get_item_embedding(model, dataset, test[\"B\"])\n",
+    "    X[i, :] = get_item_embedding(model, dataset, test[\"X\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "232c70c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dist_A = ((A - X)**2).sum(axis=1)\n",
+    "dist_B = ((B - X)**2).sum(axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "68226a8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5311"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(dist_A < dist_B).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "077b27fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "21c82892c23f4e4698f82e6858dc8168",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/10000 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "cos_dist_A = np.zeros(10000)\n",
+    "cos_dist_B = np.zeros(10000)\n",
+    "for i in tqdm(range(10000)):\n",
+    "    cos_dist_A[i] = spatial.distance.cosine(A[i, :], X[i, :])\n",
+    "    cos_dist_B[i] = spatial.distance.cosine(B[i, :], X[i, :])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "6dcb6641",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5478"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(cos_dist_A < cos_dist_B).mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e55c3057",
+   "metadata": {},
+   "source": [
+    "## Suits & dresses ABX"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "51a0c860",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "abx_tests = pd.read_json('/pio/scratch/1/i313924/data/test_data/Suits_Dresses_ABX.json', lines=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "b47984d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A = np.zeros((10000, 100))\n",
+    "B = np.zeros((10000, 100))\n",
+    "X = np.zeros((10000, 100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "b124fb16",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "58dad24b07f443f19a770b7ef2c7a4fb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "for i, test in tqdm(abx_tests.iterrows()):\n",
+    "    A[i, :] = get_item_embedding(model, dataset, test[\"A\"])\n",
+    "    B[i, :] = get_item_embedding(model, dataset, test[\"B\"])\n",
+    "    X[i, :] = get_item_embedding(model, dataset, test[\"X\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "ef8d19c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dist_A = ((A - X)**2).sum(axis=1)\n",
+    "dist_B = ((B - X)**2).sum(axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "cd447b8e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5113"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(dist_A < dist_B).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "0ba122be",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "11cdda060ee6471cb2ba5a4c75be7b18",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/10000 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "cos_dist_A = np.zeros(10000)\n",
+    "cos_dist_B = np.zeros(10000)\n",
+    "for i in tqdm(range(10000)):\n",
+    "    cos_dist_A[i] = spatial.distance.cosine(A[i, :], X[i, :])\n",
+    "    cos_dist_B[i] = spatial.distance.cosine(B[i, :], X[i, :])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "fac464d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5256"
+      ]
+     },
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
