--- a/lightfm_evaluation/LightFM_evaluation_300_slim.ipynb
+++ b/lightfm_evaluation/LightFM_evaluation_300_slim.ipynb
@@ -10,7 +10,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-4vi3kdpa because the default path (/home/i313924/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
+      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-683te7vj because the default path (/home/i313924/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n",
+      "Matplotlib is building the font cache; this may take a moment.\n"
      ]
     }
    ],
@@ -44,12 +45,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "27182c8a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = pd.read_pickle('/pio/scratch/1/i313924/lightfm_data/warp_model_300_epochs_slim.pkl')"
+    "model = pd.read_pickle('/pio/scratch/1/i313924/data/lightfm_data/warp_model_300_epochs_slim.pkl')"
    ]
   },
   {
@@ -86,18 +87,18 @@
    "id": "fc680d40",
    "metadata": {},
    "source": [
-    "## ABX"
+    "## ABX (only popular)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "bac13c0d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = pd.read_pickle('/pio/scratch/1/i313924/lightfm_data/slim_dataset.pkl')\n",
-    "abx_tests = pd.read_json('/pio/scratch/1/i313924/test_ABX_slim', lines=True)"
+    "dataset = pd.read_pickle('/pio/scratch/1/i313924/data/lightfm_data/slim_dataset.pkl')\n",
+    "abx_tests = pd.read_json('/pio/scratch/1/i313924/data/test_data/test_ABX_weighted_slim.json', lines=True)"
    ]
   },
   {
@@ -269,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "6a127cc0",
    "metadata": {},
    "outputs": [],
@@ -399,6 +400,90 @@
    ],
    "source": [
     "(cos_dist_A < cos_dist_B).mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "684ab7ee",
+   "metadata": {},
+   "source": [
+    "## Suits & dresses ABX"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "ce08b6cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1ebd2357fdd3450aae07815093b0b095",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5091\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a093a79a0a3d402b84164901783c8ea4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/10000 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5287\n"
+     ]
+    }
+   ],
+   "source": [
+    "abx_tests = pd.read_json('/pio/scratch/1/i313924/data/test_data/Suits_Dresses_ABX.json', lines=True)\n",
+    "\n",
+    "A = np.zeros((10000, 100))\n",
+    "B = np.zeros((10000, 100))\n",
+    "X = np.zeros((10000, 100))\n",
+    "\n",
+    "for i, test in tqdm(abx_tests.iterrows()):\n",
+    "    A[i, :] = get_item_embedding(model, dataset, test[\"A\"])\n",
+    "    B[i, :] = get_item_embedding(model, dataset, test[\"B\"])\n",
+    "    X[i, :] = get_item_embedding(model, dataset, test[\"X\"])\n",
+    "\n",
+    "dist_A = ((A - X)**2).sum(axis=1)\n",
+    "dist_B = ((B - X)**2).sum(axis=1)\n",
+    "\n",
+    "print((dist_A < dist_B).mean())\n",
+    "\n",
+    "cos_dist_A = np.zeros(10000)\n",
+    "cos_dist_B = np.zeros(10000)\n",
+    "\n",
+    "for i in tqdm(range(10000)):\n",
+    "    cos_dist_A[i] = spatial.distance.cosine(A[i, :], X[i, :])\n",
+    "    cos_dist_B[i] = spatial.distance.cosine(B[i, :], X[i, :])\n",
+    "\n",
+    "print((cos_dist_A < cos_dist_B).mean())"
    ]
   },
   {
