Add suits&dresses abx to svd

--- a/svd_evaluation/SVD_evaluation_1000_epochs_slim.ipynb
+++ b/svd_evaluation/SVD_evaluation_1000_epochs_slim.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "c67ba190",
    "metadata": {},
    "outputs": [
@@ -10,8 +10,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-x40i9y49 because the default path (/home/i313924/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n",
-      "Matplotlib is building the font cache; this may take a moment.\n"
+      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-ml363_0h because the default path (/home/i313924/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
      ]
     }
    ],
@@ -28,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "8cb0c814",
    "metadata": {},
    "outputs": [],
@@ -186,6 +185,90 @@
    ],
    "source": [
     "(cos_dist_A < cos_dist_B).mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f1c6e7c",
+   "metadata": {},
+   "source": [
+    "## Suits & dresses"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "9fb43305",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "336eec81ec02406dae0a989aec633140",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.4937\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ffe35874a7d24131929f2df2eec64127",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/10000 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.4952\n"
+     ]
+    }
+   ],
+   "source": [
+    "abx_tests = pd.read_json('/pio/scratch/1/i313924/data/test_data/Suits_Dresses_ABX.json', lines=True)\n",
+    "\n",
+    "A = np.zeros((10000, 100))\n",
+    "B = np.zeros((10000, 100))\n",
+    "X = np.zeros((10000, 100))\n",
+    "\n",
+    "for i, test in tqdm(abx_tests.iterrows()):\n",
+    "    A[i, :] = get_item_embedding(model, test[\"A\"])\n",
+    "    B[i, :] = get_item_embedding(model, test[\"B\"])\n",
+    "    X[i, :] = get_item_embedding(model, test[\"X\"])\n",
+    "\n",
+    "dist_A = ((A - X)**2).sum(axis=1)\n",
+    "dist_B = ((B - X)**2).sum(axis=1)\n",
+    "\n",
+    "print((dist_A < dist_B).mean())\n",
+    "\n",
+    "cos_dist_A = np.zeros(10000)\n",
+    "cos_dist_B = np.zeros(10000)\n",
+    "\n",
+    "for i in tqdm(range(10000)):\n",
+    "    cos_dist_A[i] = spatial.distance.cosine(A[i, :], X[i, :])\n",
+    "    cos_dist_B[i] = spatial.distance.cosine(B[i, :], X[i, :])\n",
+    "\n",
+    "print((cos_dist_A < cos_dist_B).mean())"
    ]
   },
   {
