--- a/utils/ABX_preparation.ipynb
+++ b/utils/ABX_preparation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "id": "2bb4f757",
    "metadata": {},
    "outputs": [],
@@ -10,34 +10,45 @@
     "import random\n",
     "\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "\n",
     "from tqdm.auto import tqdm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "id": "fcd2fe3e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ratings = pd.read_csv('/pio/scratch/1/i313924/slim_ratings.csv', names=['asin', 'reviewerID', 'overall', 'unixReviewTime'])\n",
+    "ratings = pd.read_parquet('/pio/scratch/1/recommender_systems/interim/Amazon/Clothing_Shoes_and_Jewelry_clean.parquet')\n",
     "categories = pd.read_json('/pio/scratch/1/recommender_systems/interim/Amazon/meta_Clothing_Shoes_and_Jewelry_categories.json', lines=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "23cd299a",
+   "execution_count": 3,
+   "id": "cf0ca5d3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "popular_items = ratings['asin'].unique()"
+    "# items_to_chose_from = (ratings.asin.value_counts() > 5).index"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
+   "id": "5fbf8e2b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "items_to_chose_from = np.load('/pio/scratch/1/recommender_systems/interim/word2vec/abx_tests_indices.npy', allow_pickle=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "d757daf4",
    "metadata": {},
    "outputs": [],
@@ -45,7 +56,7 @@
     "# jaki rzad wielkości tego pliku?\n",
     "def prepare_test_file(categories, path, test_set_size = 10000,\n",
     "                      category_type = \"category_1\", weighted_sample = True,\n",
-    "                      min_counts = 0, popular_items = None):\n",
+    "                      min_counts = 0, items_to_chose_from = None):\n",
     "    \n",
     "    counts = categories[category_type].value_counts()\n",
     "    counts = counts[counts > min_counts] \n",
@@ -53,8 +64,8 @@
     "    \n",
     "    categories_dict = {}\n",
     "    for category, items in categories_grouped:\n",
-    "        if popular_items is not None:\n",
-    "            categories_dict[category] = items.loc[items['asin'].isin(popular_items)]\n",
+    "        if items_to_chose_from is not None:\n",
+    "            categories_dict[category] = items.loc[items['asin'].isin(items_to_chose_from)]\n",
     "        else:\n",
     "            categories_dict[category] = items                                         \n",
     "\n",
@@ -91,14 +102,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "id": "955b450b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "79d3ece514974135b3aa51897f7a2973",
+       "model_id": "995e784ad5804d24a225e7e267e8e707",
        "version_major": 2,
        "version_minor": 0
       },
@@ -111,41 +122,16 @@
     }
    ],
    "source": [
-    "prepare_test_file(categories, '/pio/scratch/1/i313924/test_data/test_ABX_slim', category_type='category_1', test_set_size = 10000, popular_items = popular_items)"
+    "prepare_test_file(categories, '/pio/scratch/1/recommender_systems/interim/ABX_tests/for_word2vec_2.json', category_type='category_1', test_set_size = 10000, items_to_chose_from = items_to_chose_from)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
-   "id": "035036aa",
+   "execution_count": null,
+   "id": "2580d0f6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Clothing                                                                1044952\n",
-       "Shoes                                                                    466895\n",
-       "Jewelry                                                                  399823\n",
-       "Accessories                                                              186716\n",
-       "Watches                                                                  123775\n",
-       "                                                                         ...   \n",
-       "Size: 0.20 x inch                                                             1\n",
-       "Size details ,please see the size table pictures with tshirt photoes          1\n",
-       "Material: Copper, zircon                                                      1\n",
-       "Soft woven canvas fabric                                                      1\n",
-       "                                                                              1\n",
-       "Name: category_2, Length: 9908, dtype: int64"
-      ]
-     },
-     "execution_count": 92,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "counts = categories[\"category_2\"].value_counts()\n",
-    "counts"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
